src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Award_Status__c</fullName>
        <label>Award Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sole Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dual Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tri Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Committed(MS/Rev)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Tier Commitments/Attainments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Access/Capped(All Play)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Access W/ Commitment to other Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non- applicatble</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commitment_for_Price__c</fullName>
        <label>Commitment for Price</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Access/Capped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tri-Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dual Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sole Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Committed (MS/Rev)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Tier Commitments/Attainments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Access W/ Commitment to other Vendors</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Link__c</fullName>
        <formula>HYPERLINK(&quot;file:///&quot;&amp;  SpecialTerms  ,&quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Termination_date__c</fullName>
        <label>Contract Termination date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Contract__c</fullName>
        <label>Customer Contract #</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Disposable/Implantable Product Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standalone Rebate Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Cost Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge to Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgetary Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Alternative (CAP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposable Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposable Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QP Offset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catheter Purchase</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Catheter Rental</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entered_Updated_in_Rebate_Systems__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entered/Updated in Rebate Systems</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Execution_Status__c</fullName>
        <label>Execution Status</label>
        <picklist>
            <picklistValues>
                <fullName>Fully Executed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Executed without Signature</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forecast_Entered_for_Accruals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forecast Entered for Accruals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Agreement_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Agreement Reference</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contracts (Master Agreement Reference)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>One_Time_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One Time Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performance_Measurement_Starting_Period__c</fullName>
        <label>Performance Measurement Starting Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Structure__c</fullName>
        <formula>TEXT(Request_Number__r.Price_Structure__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Structure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Forecast_Form_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rebate Forecast Form Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rebate_Type__c</fullName>
        <label>Rebate Type</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Threshold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Share</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Share</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QP Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Differential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choice Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapeutic Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart Failure Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AED Rebate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Rebate_starting_period__c</fullName>
        <label>Rebate starting period</label>
        <picklist>
            <picklistValues>
                <fullName>Execution Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Following Fiscal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rebates_or_Fee_Setup_Notes__c</fullName>
        <label>Rebates or Fee Setup Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master T&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sharepoint_Num__c</fullName>
        <externalId>true</externalId>
        <label>Sharepoint Num</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Clause__c</fullName>
        <label>Technology Clause</label>
        <picklist>
            <picklistValues>
                <fullName>All new products to be negotiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All new products at no increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All new products at capped increase ($/%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evolutionary products at no increase, Revolutionary negotiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evolutionary products at capped increase ($/%), Revolutionary negotiated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <recordTypes>
        <fullName>Contract_Ops</fullName>
        <active>true</active>
        <label>Contract Ops</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Contract_Term_should_not_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>One_Time_Contract__c = FALSE  &amp;&amp;  ISBLANK(ContractTerm)</errorConditionFormula>
        <errorDisplayField>ContractTerm</errorDisplayField>
        <errorMessage>Please Enter Contract term</errorMessage>
    </validationRules>
</CustomObject>